--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "preview": "vite preview"
     },
     "dependencies": {
+        "@vkruglikov/react-telegram-web-app": "^2.1.9",
         "framer-motion": "^11.2.4",
         "react": "^18.2.0",
         "react-device-detect": "^2.2.3",
