--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "dependencies": {
         "@vkruglikov/react-telegram-web-app": "^2.1.9",
+        "clsx": "^2.1.1",
         "framer-motion": "^11.2.4",
         "react": "^18.2.0",
         "react-beforeunload": "^2.6.0",
@@ -18,6 +19,7 @@
         "react-dom": "^18.2.0",
         "react-icons": "^5.2.1",
         "react-router-dom": "^6.23.1",
+        "tailwind-merge": "^2.3.0",
         "zustand": "^4.5.2"
     },
     "devDependencies": {
