--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "type": "module",
     "scripts": {
         "dev": "vite --port 3000",
+        "host": "vite --port 3000 --host",
         "build": "tsc && vite build",
         "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
         "preview": "vite preview"
@@ -13,6 +14,7 @@
         "@vkruglikov/react-telegram-web-app": "^2.1.9",
         "clsx": "^2.1.1",
         "framer-motion": "^11.2.4",
+        "lodash-es": "^4.17.21",
         "react": "^18.2.0",
         "react-beforeunload": "^2.6.0",
         "react-device-detect": "^2.2.3",
@@ -23,6 +25,8 @@
         "zustand": "^4.5.2"
     },
     "devDependencies": {
+        "@types/lodash-es": "^4.17.12",
+        "@types/node": "^20.14.8",
         "@types/react": "^18.2.66",
         "@types/react-dom": "^18.2.22",
         "@typescript-eslint/eslint-plugin": "^7.2.0",
@@ -36,6 +40,7 @@
         "prettier": "3.2.5",
         "tailwindcss": "^3.4.4",
         "typescript": "^5.2.2",
-        "vite": "^5.2.0"
+        "vite": "^5.2.0",
+        "vite-plugin-svgr": "^4.2.0"
     }
 }
