--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,13 @@
         "strict": true,
         "noUnusedLocals": true,
         "noUnusedParameters": true,
-        "noFallthroughCasesInSwitch": true
+        "noFallthroughCasesInSwitch": true,
+
+        "paths": {
+            "@/*": ["./src/*"],
+            "@svg/*": ["./src/assets/svg/*"],
+        }
     },
-    "include": ["src"],
+    "include": ["env.d.ts", "src"],
     "references": [{ "path": "./tsconfig.node.json" }]
 }
