--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     },
     "dependencies": {
         "@vkruglikov/react-telegram-web-app": "^2.1.9",
+        "axios": "^1.7.2",
         "clsx": "^2.1.1",
         "framer-motion": "^11.2.4",
         "lodash-es": "^4.17.21",
